--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "externals/lidia"]
 	path = externals/lidia
 	url = git@github.com:gauenk/lidia.git
+[submodule "externals/cola_net"]
+	path = externals/cola_net
+	url = git@github.com:gauenk/cola_net.git
+[submodule "externals/dagl"]
+	path = externals/dagl
+	url = git@github.com:gauenk/dagl.git
