--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,12 @@
 [submodule "externals/dagl"]
 	path = externals/dagl
 	url = git@github.com:gauenk/dagl.git
+[submodule "externals/n3net"]
+	path = externals/n3net
+	url = git@github.com:gauenk/n3net.git
+[submodule "externals/uformer"]
+	path = externals/uformer
+	url = git@github.com:gauenk/uformer.git
+[submodule "externals/nlrn"]
+	path = externals/nlrn
+	url = git@github.com:gauenk/nlrn.git
