--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,9 @@
     branch = main
 	path = externals/dagl
 	url = git@github.com:gauenk/dagl.git
+[submodule "externals/csnln"]
+	path = externals/csnln
+	url = git@github.com:gauenk/csnln.git
+[submodule "externals/cran"]
+	path = externals/cran
+	url = git@github.com:gauenk/cran.git
