--- a/.gitmodules
+++ b/.gitmodules
@@ -24,3 +24,6 @@
 [submodule "externals/n3net"]
 	path = externals/n3net
 	url = git@github.com:gauenk/n3net.git
+[submodule "externals/maxim"]
+	path = externals/maxim
+	url = git@github.com:gauenk/maxim.git
