--- a/.gitmodules
+++ b/.gitmodules
@@ -25,5 +25,6 @@
 	path = externals/n3net
 	url = git@github.com:gauenk/n3net.git
 [submodule "externals/maxim"]
+    branch = main
 	path = externals/maxim
 	url = git@github.com:gauenk/maxim.git
