xsearch for colanet

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "externals/lidia"]
 	path = externals/lidia
 	url = git@github.com:gauenk/lidia.git
-[submodule "externals/cola_net"]
-	path = externals/cola_net
-	url = git@github.com:gauenk/cola_net.git
+[submodule "externals/colanet"]
+	path = externals/colanet
+	url = git@github.com:gauenk/colanet.git
 [submodule "externals/uformer"]
     branch = main
 	path = externals/uformer
