--- a/.github/workflows/pylint.yaml
+++ b/.github/workflows/pylint.yaml
@@ -17,8 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install torch==1.12.1+cu11
-        ./install.sh
+        python -m pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
