--- a/.github/workflows/button.yaml
+++ b/.github/workflows/button.yaml
@@ -21,10 +21,11 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: CUDA Install ${{ matrix.cuda-version }}
-      if: ${{ matrix.cuda-version != 'cpu' }}
-      run: |
-        bash .github/workflows/install_cuda.sh
+    - name: Install CUDA
+    - uses: Jimver/cuda-toolkit@v0.2.8
+      id: cuda-toolkit
+      with:
+        cuda: '11.3.0'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
