--- a/.github/workflows/button.yaml
+++ b/.github/workflows/button.yaml
@@ -7,11 +7,10 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     timeout-minutes: 10
-
     strategy:
       matrix:
-        python-version: ["3.8"]
-        cuda-version: ["11.1"]
+        python-version: ["3.10"]
+        cuda-version: ["11.8"]
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -29,10 +28,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
+        python -m pip install -r reqs/reqs_cu117.txt
     - name: Install our package
       run: |
-        python -m pip install ./lib
+        python -m pip install .
     - name: Testing Code
       run: |
         python -m pytest -s ./test/
