--- a/.github/workflows/button.yaml
+++ b/.github/workflows/button.yaml
@@ -16,6 +16,19 @@ jobs:
       uses: actions/checkout@v2
       with:
           fetch-depth: 0
+    - name: Setup Ninja
+      uses: ashutoshvarma/setup-ninja@master
+      with:
+        # ninja version to download. Default: 1.10.0
+        version: 1.10.0
+    - name: Build with CMake
+      uses: ashutoshvarma/action-cmake-build@master
+      with:
+        build-dir: ${{ runner.workspace }}/build
+        cc: gcc
+        cxx: g++
+        configure-options: -G Ninja
+        build-type: Release
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
