--- a/.github/workflows/button.yaml
+++ b/.github/workflows/button.yaml
@@ -12,6 +12,18 @@ jobs:
         python-version: ["3.10"]
         cuda-version: ["11.8"]
     steps:
+    - name: Cache Cuda Modules
+      id: cache-cuda
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-cuda-toolkit
+      with:
+        # cuda cache files are stored in `/usr/local/cuda/` on Linux/macOS
+        path: |
+          /usr/local/cuda*
+        key: ${{ runner.os }}-
+        restore-keys: |
+          ${{ runner.os }}-
     - name: Setup Ninja
       uses: ashutoshvarma/setup-ninja@master
       with:
@@ -21,15 +33,22 @@ jobs:
       uses: actions/checkout@v2
       with:
           fetch-depth: 0
+    - if: ${{ steps.cache-cuda-toolkit.outputs.cache-hit != 'true' }}
+      name: Install CUDA
+      continue-on-error: true
+      uses: Jimver/cuda-toolkit@v0.2.8
+      id: cuda-toolkit
+      with:
+        cuda: '11.8.0'
+    - name: Export CUDA Paths
+      run: |
+        export CUDA_PATH=/usr/bin/cuda/
+        export PATH="$CUDA_PATH/bin:$PATH"
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install CUDA
-      uses: Jimver/cuda-toolkit@v0.2.8
-      id: cuda-toolkit
-      with:
-        cuda: '11.3.0'
+        cache: 'pip' # caching pip dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
