--- a/.github/workflows/button.yaml
+++ b/.github/workflows/button.yaml
@@ -51,6 +51,9 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        cache: pip
+        cache-dependency-path: |
+          reqs/reqs_cu113.txt
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
