--- a/.github/workflows/button.yaml
+++ b/.github/workflows/button.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: [ubuntu-20.04, gpu]
     timeout-minutes: 10
     strategy:
       matrix:
@@ -58,6 +58,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r reqs/reqs_cu113.txt
+    - name: Check CUDA
+      run: python -c "import torch; print(torch.cuda.device_count())"
     - name: Install our package
       run: |
         python -m pip install .
