--- a/.github/workflows/button.yaml
+++ b/.github/workflows/button.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: [ubuntu-20.04, gpu]
+    runs-on: ubuntu-20.04
     timeout-minutes: 10
     strategy:
       matrix:
