--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,5 @@ filterwarnings =
     ignore::numba.NumbaPerformanceWarning
     ignore::DeprecationWarning
     ignore:function ham\(\) is deprecated:DeprecationWarning
+norecursedirs = tests/dev/*
+
